[package]
name = "rust_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
#panic = "abort"

[profile.release]
panic = "abort"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.9.8"
x86_64 = "0.14.11"
uart_16550 = "0.3.0"
pic8259 = "0.10.4"
pc-keyboard = "0.7.0"
linked_list_allocator = "0.9.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# bootimage runner appends the test_args to the default QEMU command for all test excutables
# the arguments are ignored for normal `cargo run`
[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"
]
test-success-exit-code = 33  # map success code ((0x10 << 1) | 1) to qemu default success code 0
test-timeout = 60  # in seconds, default 300
